# ccg-joker-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.kilocode/rules/: python-workflow.md
.kilocode/rules-architect/: python-uv.md
data/: cards.json
notebooks/: explore_data.ipynb
src/ccjoker/: __init__.py  checkpoint.py  dataset.py  env.py  eval.py  gate.py  mcts.py  model.py  selfplay.py  train.py  train_rl.py  utils.py
tests/: test_dataset.py  test_dirichlet_noise.py  test_eval.py  test_gate.py  test_model.py  test_selfplay.py  test_train_rl.py  test_training.py
tests/fixtures/: mixed.jsonl  sample.jsonl
