[project]
name = "cc-joker-engine"
version = "0.1.0"
description = "CC Group Joker Engine: dataset, encoding, policy/value model, training and evaluation."
readme = "README.md"
authors = [
    { name = "JT", email = "j.taylor.1990@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.3.1+cu121",
    "numpy<2",
    "pydantic>=2",
    "rich",
    "tqdm",
    "typer>=0.9",
    "pytest",
    "ruff",
]

[project.scripts]
ccj-train     = "ccjoker.train:app"
ccj-eval      = "ccjoker.eval:app"
ccj-selfplay  = "ccjoker.selfplay:app"
ccj-train-rl  = "ccjoker.train_rl:app"
ccj-gate      = "ccjoker.gate:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccjoker"]

# Configure uv to resolve torch from the PyTorch CUDA 12.1 index
[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["notebooks/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
